--- a/web-components/lesson-12/test/testrunner.htm
+++ b/web-components/lesson-12/test/testrunner.htm
@@ -6,7 +6,9 @@
   <script src="./../../../node_modules/chai/chai.js"></script>
   <script>mocha.setup('bdd')</script>
 
-  <div><p></p><div><p id='find_me'></p></div></div>
+  <div><p>123</p><div><p id='find_me'>456</p></div></div>
+
+  <div id='bad_div'><p id='bad_p1'>first p</p><p id='bad_p2'>second 2</p></div>
 
   <script src="./../getPath.js"></script>
   <script src="./getPathModuleTest.js"></script>
