--- a/web-components/lesson-12/test/testrunner.htm
+++ b/web-components/lesson-12/test/testrunner.htm
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-  <!-- <title>Mocha Tests</title>
+  <title>Mocha Tests</title>
   <link rel="stylesheet" href="./../../../node_modules/mocha/mocha.css">
   <div id="mocha"></div>
   <script src="./../../../node_modules/mocha/mocha.js"></script>
   <script src="./../../../node_modules/chai/chai.js"></script>
-  <script>mocha.setup('bdd')</script> -->
+  <script>mocha.setup('bdd')</script>
 
   <div id='bad_div'>
     <p id='bad_p1'>first p</p>
@@ -13,5 +13,5 @@
   </div>
 
   <script src="./../getPath.js"></script>
-  <!-- <script src="./getPathModuleTest.js"></script>
-  <script>mocha.run();</script> -->
+  <script src="./getPathModuleTest.js"></script>
+  <script>mocha.run();</script>
